GUI FULLY WORKINGGGGGGG!!!!!!!!!!